# ColabSfM

./: .gitignore  Dockerfile  README.md  pyproject.toml  qualitative_results.ipynb  qualitative_results.py  qualitative_results_cambridge.ipynb  qualitative_results_quad6k.ipynb  requirements.txt  setup.py
7scenes_pipeline/: 0_7scenes_download.bash  3_create_7scenes_bench_sift.py  7_scenes_to_train_test.py  7scenes_colmap_download.bash  7scenes_download.bash  7scenes_partition_reconstructions.py  7scenes_pipeline_sift_sattler.py
Quad/: 0_quad_pipeline_sift.py  2_create_combined_sfmreg.py
_hloc/: extract_features.py  match_features.py  triangulation.py  visualization.py
cambridge_pipeline/: 1_cambridge_partition_reconstructions.py  2_cambridge_pipeline_disk_lightglue.py  2_cambridge_pipeline_sift.py  3_create_cambridge_bench.py  cambridge_partition_reconstructions.py  cambridge_pipeline_sift.py  cambridge_pipeline_sift_sattler.py  cambridge_to_colmap.ipynb  create_cambridge_bench.py  stmarys_pipeline_sift.py  torsten_cambridge.bash
colabsfm/: __init__.py  checkpoint.py  metrics.py  solvers.py  train.py  utils.py
experiments/: evaluate_registration_c2f_roi_tr.py  refineroitr_eval.py  run_dist_experiment.py  run_experiment_3dmatch.py  run_experiment_cambridge.py  run_experiment_sfmreg.py  run_experiment_sfmreg_trajectory.py  run_experiment_sfmreg_trajectory_geo.py  run_experiment_sfmreg_trajectory_predator.py
hloc/: extract_features.py
omnireg/: checkpoint.py  train.py
scripts/: cross_entropy.py  demo.ipynb  est_normals.py  fourier_equivariance_test.py  (+2 more)
(+654 files in other folders)
