[project]
name = "colabsfm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Johan Edstedt", email = "johan.edstedt@liu.se" }
]
dependencies = [
    "numpy<=1.26",
    "matplotlib>=3.9.1",
    "opencv-python>=4.10.0.84",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "open3d>=0.18.0",
    "scipy>=1.14.0",
    "einops>=0.8.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.4",
    "easydict>=1.13",
    "tensorboardx>=2.6.2.2",
    "pycolmap==0.6.1",
    "h5py>=3.11.0",
    "gitpython>=3.1.43",
    "easy-gravity>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/colabsfm"]
